# play-with-agents

./: .gitignore  Makefile  README.md  create_jwt.py  pyproject.toml  trigger_celery.py  trigger_conversation.py  trigger_todo.py
.devcontainer/: devcontainer.json  docker-compose.yml
alembic/: env.py
alembic/versions/: 0153a7966104_add_scheduled.py  583a556d8249_first_migration.py  a1e1172987ef_first_migration.py  e7cb9884d233_first_migration.py
app/: main.py  tasks.py
app/apis/: chat.py  internal.py
app/handlers/: agent.py  base.py  normal_agent.py
app/models/: agent.py  chat.py  exceptions.py  message.py  metadata.py  todo.py  user.py
app/models/sqlalchemy/: __init__.py  chat.py  todo.py
app/repositories/: agent.py  chat.py  message.py  todo.py
app/services/: answer_question.py  chat.py  todo.py
app/utils/: config.py  cronjob.py  prompt.py
config/: dev.env.template
websocket/: Dockerfile  config.py  main.py  receiver.py  requirements.txt
